# spotify-mcp-extended

./: README.md  main.py  pyproject.toml
