[project]
name = "spotify-mcp-extended"
version = "0.1.0"
description = "Extended Spotify MCP server — queue, recommendations, playlist management, shuffle, repeat"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
